feed swagger (#103)
* feed swagger

* update description swagger

---------
